# scVAE_mva2025

./: .gitignore  PBMC_experiments.ipynb  PBMC_experiments_IndMoMVAE.ipynb  PBMC_experiments_MixtureVAE.ipynb  PBMC_experiments_MoMixVAE.ipynb  README.md  data_pipeline.ipynb  pyproject.toml  requirements.txt  test_pipeline.ipynb
adam/: architecture.py  display.ipynb  my_loss.py  plot.ipynb  plot_utils.py
data_pipeline/: README.md  config.py  converters.py  data_loader.py  dataset_registry.py  preprocess.py  utils.py
data_pipeline/src/: DatasetWrapper.py  combine.py  config.py  dataloader.py  downloader.py  load_anndata.py
mixture_vae/: __init__.py  distributions.py  figure1.py  mvae.py  run_handling.py  saving.py  test_iwae.py  training.py  training_MoMix.py  utils.py  viz.py
