[project]
name = "scvae-mva2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "pandas>=2.3.3",      
    "h5py>=3.15.1",        
    "anndata>=0.12.6",     # Added: The AnnData object for single-cell data
    "scanpy>=1.11.5",      # Added: The core single-cell analysis library
    "scikit-misc>=0.1.4",  
    "scikit-learn>=1.7.2", 
    "scipy>=1.16.3", 
    "ipykernel>=6.29.5",
    "requests>=2.31.0"
        
]


